--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="gads_logo_desc">GADs Logo</string>
     <string name="submit_button_desc">Submit Button</string>
     <string name="project_submission">Project Submission</string>
+    <string name="learning_hours">learning hours</string>
+    <string name="skill_iq_score">skill IQ Score</string>
 </resources>
